--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,15 @@
-unbind C-b
 
-# remap prefix to Control + q
-set -g prefix C-a
-# bind 'C-q C-q' to type 'C-q'
-bind C-a send-prefix
+unbind C-b
+set -g prefix `
+bind ` send-prefix
+
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+unbind '"'
+unbind %
+bind '"' split-window -c "#{pane_current_path}"
+bind v split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
