--- a/tag-i3/config/i3/config
+++ b/tag-i3/config/i3/config
@@ -35,6 +35,7 @@ set $browser google-chrome-stable --force-device-scale-factor=1.12
 set $fm thunar
 set $mail nylas-mail
 set $vpn PATH="$PATH:/home/dms/.config/bash/scripts" vpn
+set $dmenu_prompt $HOME/dmenu_prompt
 set $spotify LD_PRELOAD=/usr/lib/libcurl.so.3:/home/dms/Documents/spotifywm/spotifywm.so /usr/share/spotify/spotify --force-device-scale-factor=1.2
 
 # start a terminal
@@ -135,7 +136,8 @@ bindsym $mod+space focus mode_toggle
 bindsym $mod+a focus parent
 
 bindsym Print exec --no-startup-id scrot ~/Pictures/Screenshots/'%Y-%m-%d_%T.png'
-bindsym --release $mod+Shift+F4 exec --no-startup-id scrot -s ~/Pictures/Screenshots/'%Y-%m-%d_%T.png'
+bindsym Shift+Print exec --no-startup-id scrot -u ~/Pictures/Screenshots/'%Y-%m-%d_%T.png'
+bindsym --release $mod+Shift+Print exec --no-startup-id scrot -s ~/Pictures/Screenshots/'%Y-%m-%d_%T.png'
 
 bindsym $mod+Tab	workspace back_and_forth
 
@@ -186,7 +188,7 @@ bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 #bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
-bindsym		$mod+Shift+e	exec i3-msg exit
+bindsym		$mod+Shift+Escape exec $dmenu_prompt "Leave i3?" "i3-msg exit"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -261,8 +263,8 @@ for_window [class="Spotify"] move to workspace $ws10
 
 bindsym --release $mod+shift+x exec slock
 bindsym --release $mod+shift+s exec slock sh -c 'sleep 3 && systemctl suspend -i'
-bindsym $mod+shift+BackSpace exec reboot
-bindsym $mod+shift+p exec poweroff
+bindsym $mod+shift+BackSpace exec $dmenu_prompt "Reboot?" reboot
+bindsym $mod+shift+p exec $dmenu_prompt "Poweroff?" poweroff
 
 bindsym XF86AudioRaiseVolume exec --no-startup-id amixer -q -D pulse sset Master 5%+
 bindsym XF86AudioLowerVolume exec --no-startup-id amixer -q -D pulse sset Master 5%-
@@ -272,7 +274,7 @@ bindsym XF86AudioPlay exec --no-startup-id playerctl play-pause
 bindsym XF86AudioNext exec --no-startup-id playerctl next
 bindsym XF86AudioPrev exec --no-startup-id playerctl previous
 
-exec_always feh --bg-scale /home/dms/.config/i3/wall
+exec_always feh --no-fehbg --bg-scale /home/dms/.config/i3/wall
 exec --no-startup-id compton --config ~/.config/i3/compton.conf -b
 
 exec --no-startup-id "i3-msg 'workspace $ws2; append_layout /home/dms/.config/i3/ws2.json'"
