--- a/tag-i3/config/i3/config
+++ b/tag-i3/config/i3/config
@@ -34,8 +34,6 @@ set $term termite
 set $browser google-chrome-stable --force-device-scale-factor=1.12
 set $fm thunar
 set $mail nylas-mail
-set $vpn PATH="$PATH:/home/dms/.config/bash/scripts" vpn
-set $dmenu_prompt $HOME/.config/bash/scripts/dmenu_prompt
 set $spotify LD_PRELOAD=/usr/lib/libcurl.so.3:/home/dms/Documents/spotifywm/spotifywm.so /usr/share/spotify/spotify --force-device-scale-factor=1.2
 
 # start a terminal
@@ -59,7 +57,7 @@ bindsym 	$mod+n 		exec $fm
 bindsym 	$mod+i 		exec $term -e htop
 bindsym		$mod+m		exec $spotify
 bindsym		$mod+o		exec arduino
-bindsym		$mod+p		exec --no-startup-id $vpn
+bindsym		$mod+p		exec --no-startup-id vpn
 bindsym		$mod+F1		exec --no-startup-id redshift
 bindsym		$mod+F2		exec --no-startup-id killall redshift
 bindsym		$mod+F3		exec --no-startup-id xautolock -time 10 -locker slock
@@ -188,7 +186,7 @@ bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 #bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
-bindsym		$mod+Shift+Escape exec $dmenu_prompt "Leave i3?" "i3-msg exit"
+bindsym		$mod+Shift+Escape exec dmenu_prompt "Leave i3?" "i3-msg exit"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -262,8 +260,8 @@ for_window [class="Spotify"] move to workspace $ws10
 
 bindsym --release $mod+shift+x exec slock
 bindsym --release $mod+shift+s exec slock sh -c 'sleep 3 && systemctl suspend -i'
-bindsym $mod+shift+BackSpace exec $dmenu_prompt "Reboot?" reboot
-bindsym $mod+shift+p exec $dmenu_prompt "Poweroff?" poweroff
+bindsym $mod+shift+BackSpace exec dmenu_prompt "Reboot?" reboot
+bindsym $mod+shift+p exec dmenu_prompt "Poweroff?" poweroff
 
 bindsym XF86AudioRaiseVolume exec --no-startup-id amixer -q -D pulse sset Master 5%+
 bindsym XF86AudioLowerVolume exec --no-startup-id amixer -q -D pulse sset Master 5%-
