--- a/tag-i3/config/i3/config
+++ b/tag-i3/config/i3/config
@@ -135,7 +135,7 @@ bindsym $mod+a focus parent
 
 bindsym Print exec --no-startup-id scrot ~/Pictures/Screenshots/'%Y-%m-%d_%T.png'
 bindsym Shift+Print exec --no-startup-id scrot -u ~/Pictures/Screenshots/'%Y-%m-%d_%T.png'
-bindsym --release $mod+Shift+Print exec --no-startup-id scrot -s ~/Pictures/Screenshots/'%Y-%m-%d_%T.png'
+bindsym --release $mod+Shift+Print exec --no-startup-id "killall compton && scrot -s ~/Pictures/Screenshots/'%Y-%m-%d_%T.png' && compton --config ~/.config/i3/compton.conf -b"
 
 bindsym $mod+Tab	workspace back_and_forth
 
