--- a/tag-i3/config/i3/config
+++ b/tag-i3/config/i3/config
@@ -34,7 +34,7 @@ set $term termite
 set $browser google-chrome-stable --force-device-scale-factor=1.8
 set $fm thunar
 set $mail nylas-mail
-set $spotify LD_PRELOAD=/usr/lib/libcurl.so.3:/home/dms/Documents/spotifywm/spotifywm.so /usr/share/spotify/spotify --force-device-scale-factor=1.8
+set $spotify LD_PRELOAD=/usr/lib/libcurl.so.3:~/Documents/spotifywm/spotifywm.so /usr/share/spotify/spotify --force-device-scale-factor=1.8
 
 # start a terminal
 bindsym $mod+Return exec $term
@@ -276,18 +276,18 @@ bindsym XF86AudioPrev exec --no-startup-id playerctl previous
 
 
 # Launch Applications
-exec_always feh --no-fehbg --bg-scale /home/dms/.config/i3/wall
-exec_always --no-startup-id compton  --config ~/compton.conf
+exec_always feh --no-fehbg --bg-scale ~/.config/i3/wall
+exec_always --no-startup-id compton  --config ~/.config/i3/compton.conf
 
-exec --no-startup-id "i3-msg 'workspace $ws2; append_layout /home/dms/.config/i3/ws2.json'"
-exec --no-startup-id "i3-msg 'workspace $ws3; append_layout /home/dms/.config/i3/ws3.json'"
-#exec --no-startup-id "i3-msg 'workspace $ws10; append_layout /home/dms/.config/i3/ws10.json'"
+exec --no-startup-id "i3-msg 'workspace $ws2; append_layout ~/.config/i3/ws2.json'"
+exec --no-startup-id "i3-msg 'workspace $ws3; append_layout ~/.config/i3/ws3.json'"
+#exec --no-startup-id "i3-msg 'workspace $ws10; append_layout ~/.config/i3/ws10.json'"
 exec --no-startup-id "i3-msg 'workspace $ws1'"
 
 exec $term
 exec $term
 exec $browser
-#exec LD_PRELOAD=/usr/lib/libcurl.so.3:/home/dms/Documents/spotifywm/spotifywm.so /usr/share/spotify/spotify
+#exec LD_PRELOAD=/usr/lib/libcurl.so.3:~/Documents/spotifywm/spotifywm.so /usr/share/spotify/spotify
 exec thunar
 exec nextcloud
 exec $spotify
