add gvim icon to vim.desktop

--- a/host-linux/local/share/applications/vim.desktop
+++ b/host-linux/local/share/applications/vim.desktop
@@ -3,6 +3,7 @@ Type=Application
 Name=Vim
 TryExec=vim
 Exec=termite -e "vim %F"
+Icon=gvim
 Comment=Editor
 NotShowIn=GNOME;KDE;XFCE;MATE;
 StartupNotify=false
