--- a/host-xps/config/i3/config
+++ b/host-xps/config/i3/config
@@ -9,6 +9,9 @@
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
+# lock screen right away
+exec slock
+
 set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
@@ -61,8 +64,8 @@ bindsym		$mod+o		exec arduino
 bindsym		$mod+p		exec --no-startup-id vpn
 bindsym		$mod+F1		exec --no-startup-id redshift
 bindsym		$mod+F2		exec --no-startup-id killall redshift
-bindsym		$mod+F3		exec --no-startup-id xautolock -time 10 -locker slock
-bindsym		$mod+F4		exec --no-startup-id killall xautolock
+#bindsym		$mod+F3		exec --no-startup-id xautolock -time 10 -locker slock
+#bindsym		$mod+F4		exec --no-startup-id killall xautolock
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -136,7 +139,7 @@ bindsym $mod+a focus parent
 # Screenshotting
 bindsym Print exec --no-startup-id scrot ~/Pictures/Screenshots/'%Y-%m-%d_%T.png'
 bindsym Shift+Print exec --no-startup-id scrot -u ~/Pictures/Screenshots/'%Y-%m-%d_%T.png'
-bindsym --release $mod+Shift+Print exec --no-startup-id "killall compton; scrot -s ~/Pictures/Screenshots/'%Y-%m-%d_%T.png'; compton --config ~/.config/i3/compton.conf -b"
+bindsym --release $mod+Shift+Print exec --no-startup-id escrotum -s ~/Pictures/Screenshots/'%Y-%m-%d_%T.png'
 
 bindsym $mod+Tab	workspace back_and_forth
 
@@ -251,7 +254,7 @@ bar {
 	}
 
 	#status_command bumblebee-status -m spotify pasink nic publicip memory cpu sensors disk datetime -p interval=1 disk.path=/home datetime.format="%a, %b %d, %Y at %I:%M:%S %p" weather.unit=imperial -t solarized-powerline
-	status_command bumblebee-status -m spotify pasink nic battery brightness cpu weather datetime -p interval=1 datetime.format="%a, %b %d, %Y at %I:%M:%S %p" weather.unit=imperial nic.left-click="$term -e 'sudo -A wifi-menu'" brightness.wheel-up="brightness +2" brightness.wheel-down="brightness -2" -t solarized-powerline
+	status_command bumblebee-status -m spotify pasink nic battery brightness cpu datetime -p interval=1 datetime.format="%a, %b %d, %Y at %I:%M:%S %p" weather.unit=imperial nic.left-click="$term -e 'sudo -A wifi-menu'" brightness.wheel-up="brightness +2" brightness.wheel-down="brightness -2" -t solarized-powerline
 
 	position bottom
 }
@@ -261,8 +264,8 @@ bar {
 for_window [class="Spotify"] move to workspace $ws10
 
 # Locking and Power
-bindsym --release $mod+shift+x exec slock
-bindsym --release $mod+shift+s exec slock sh -c 'sleep 1 && systemctl suspend -i'
+bindsym --release $mod+shift+x exec --no-startup-id loginctl lock-session
+bindsym --release $mod+shift+s exec --no-startup-id systemctl suspend
 bindsym $mod+shift+BackSpace exec dmenu_prompt "Reboot?" reboot
 bindsym $mod+shift+p exec dmenu_prompt "Poweroff?" poweroff
 
@@ -295,5 +298,5 @@ exec nextcloud
 exec $spotify
 
 # autolocker
-exec --no-startup-id xautolock -time 10 -locker slock
-exec slock
+#exec --no-startup-id xautolock -time 10 -locker slock
+exec --no-startup-id xss-lock -l ~/.config/i3/transfer-sleep-lock-generic-delay.sh
