--- a/host-xps/config/i3/config
+++ b/host-xps/config/i3/config
@@ -9,6 +9,10 @@
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
+# gaps inner 15
+# gaps outer 15
+# for_window [class="^.*"] border pixel 2
+
 set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
@@ -41,11 +45,13 @@ bindsym $mod+Return exec $term
 
 set $floatsize 2100 1350
 for_window [instance="dropdown"] floating enable
+# for_window [instance="dropdown"] sticky enable
 for_window [instance="dropdown"] resize set $floatsize
 for_window [instance="dropdown"] move position center
 for_window [instance="dropdown"] move scratchpad
-exec --no-startup-id $term --name dropdown -e tmux
-bindsym $mod+u [instance="dropdown"] scratchpad show; resize set $floatsize; move position center
+for_window [instance="dropdown"] scratchpad show
+bindsym $mod+u [instance="dropdown"] scratchpad show; move position center
+#; resize set $floatsize; move position center
 bindsym $mod+Shift+u exec --no-startup-id $term --name dropdown -e tmux
 
 # incognitoww
