--- a/host-nuc/config/i3/config
+++ b/host-nuc/config/i3/config
@@ -295,3 +295,5 @@ exec $spotify
 # autolocker
 #exec --no-startup-id xautolock -time 10 -locker slock
 exec --no-startup-id xss-lock slock
+
+# vim:ft=i3:
