--- a/host-xps/config/i3/compton.conf
+++ b/host-xps/config/i3/compton.conf
@@ -101,6 +101,7 @@ active-opacity = 1;
 frame-opacity = 1;
 inactive-opacity-override = false;
 alpha-step = 0.06;
+# inactive-dim = 0.05;
 
 # Dim inactive windows. (0.0 - 1.0)
 # inactive-dim = 0.2;
