--- a/host-xps/config/termite/config
+++ b/host-xps/config/termite/config
@@ -90,7 +90,10 @@ cursor_shape = block
 foreground      = #93a1a1
 foreground_bold = #93a1a1
 cursor          = #93a1a1
-background      = #002b36
+background	= #002b36
+#background	= #ffffff
+#background	= #1d1f21
+#background      = #ffffff
 #background = rgba(0,43,54,0.75)
 
 # black
