dracula theme; scratchpad

--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -1,6 +1,5 @@
 # Thank you code_nomad: http://9m.no/ꪯ鵞
 # and Arch Wiki contributors: https://wiki.archlinux.org/index.php/Compton
-
 #################################
 #
 # Backend
@@ -124,6 +123,10 @@ blur-background-fixed = false;
 blur-background-exclude = [
     "window_type = 'dock'",
     "window_type = 'desktop'"
+];
+
+opacity-rule = [
+    "63:class_g = 'Bspwm' && class_i = 'presel_feedback'"
 ];
 
 #################################
