--- a/config/fontconfig/conf.d/56-joypixels.conf
+++ b/config/fontconfig/conf.d/56-joypixels.conf
@@ -123,6 +123,7 @@ fc-match -s monospace
   <alias binding="strong">
     <family>emoji</family>
     <default><family>Joy Pixels</family></default>
+    <prefer><family>Joy Pixels</family></prefer>
   </alias>
 
   <!-- Alias requests for the other emoji fonts -->
