--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,9 @@
 
+set -g default-terminal "tmux-256color"
+
+set-option -g prefix C-x
+bind C-x send-prefix
+
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
