--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,9 @@
 
 set -g default-terminal "tmux-256color"
+set -g mouse on
 
 set-option -g prefix C-x
+set-option -sg escape-time 10
 bind C-x send-prefix
 
 bind h select-pane -L
