add macos dotfiles

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,9 +2,22 @@
 set -g default-terminal "tmux-256color"
 set -g mouse on
 
-set-option -g prefix C-x
+set-option -g prefix C-b
 set-option -sg escape-time 10
 bind C-x send-prefix
+
+setw -g mode-keys vi
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+unbind -T copy-mode-vi Enter
+
+if-shell "uname | grep -q Darwin" {
+	bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel pbcopy;
+	bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel pbcopy
+} {
+	bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel xclip -i -sel c;
+	bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel xclip -i -sel c;
+}
 
 bind h select-pane -L
 bind j select-pane -D
