--- a/tmux.conf
+++ b/tmux.conf
@@ -6,8 +6,10 @@ set-option -g prefix C-b
 set-option -sg escape-time 10
 bind C-x send-prefix
 
+# set-option -g history-limit 50000
+
 setw -g mode-keys vi
-bind-key -T copy-mode-vi v send-keys -X begin-selection
+# bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 unbind -T copy-mode-vi Enter
 
