--- a/config/git/config
+++ b/config/git/config
@@ -1,15 +1,17 @@
 [user]
 	email = me@dov.ms
 	name = Dov Salomon
-	signingkey = 481A8B3BA7D81D34
 [push]
 	default = simple
 [alias]
 	pom = push origin master
 	last = log -1 HEAD
 	cam = commit add -m
+	gone = ! git fetch -p && git for-each-ref --format '%(refname:short) %(upstream:track)' | awk '$2 == \"[gone]\" {print $1}' | xargs -r git branch -D
 [pull]
 	rebase = false
+[log]
+	date = local
 [init]
 	defaultBranch = master
 [filter "lfs"]
@@ -17,3 +19,7 @@
 	required = true
 	clean = git-lfs clean -- %f
 	smudge = git-lfs smudge -- %f
+[include]
+	path = ~/.config/git/local
+
+; vim: ft=gitconfig
