--- a/tmux.conf
+++ b/tmux.conf
@@ -9,16 +9,12 @@ bind C-x send-prefix
 # set-option -g history-limit 50000
 
 setw -g mode-keys vi
-# bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi v send-keys -X begin-selection
-unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 if-shell "uname | grep -q Darwin" {
-	bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel pbcopy;
+	bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel pbcopy
 	bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel pbcopy
-} {
-	bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel xclip -i -sel c;
-	bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel xclip -i -sel c;
 }
 
 bind h select-pane -L
