migrate to init.lua

--- a/config/fontconfig/conf.d/56-joypixels.conf
+++ b/config/fontconfig/conf.d/56-joypixels.conf
@@ -111,7 +111,9 @@ fc-match -s monospace
     Note: If you want a different monospace font, this is where you change it.
     -->
     <edit name="family" mode="prepend_first">
-      <string>UbuntuMono Nerd Font</string>
+      <!-- <string>UbuntuMono Nerd Font</string> -->
+      <string>Comic Code</string>
+      <!-- <string>Codelia</string> -->
     </edit>
     <!-- Followed by Joy Pixels -->
     <edit name="family" mode="prepend_first">
