--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -13,7 +13,8 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 if-shell "uname | grep -q Darwin" {
-	bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel pbcopy
+	unbind -T copy-mode-vi Enter
+	bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel pbcopy;
 	bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel pbcopy
 }
 
@@ -27,3 +28,11 @@ unbind %
 bind '"' split-window -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
+
+# tpm
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'dracula/tmux'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.local/share/tmux/plugins/tpm/tpm'
