--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,4 +1,5 @@
 
+# set-option -sa terminal-overrides ",xterm*:Tc"
 set -g default-terminal "screen-256color"
 set -g mouse on
 
@@ -28,6 +29,8 @@ unbind %
 bind '"' split-window -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
+
+set -g @catppuccin_flavour 'macchiato'
 
 # tpm
 set -g @plugin 'tmux-plugins/tpm'
